--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -1,10 +1,26 @@
 ; PHP Configuration
 
+opcache.enable=1
+opcache.memory_consumption=128
+opcache.max_accelerated_files=4000
+opcache_revalidate_freq = 240
+opcache.interned_strings_buffer=8
+opcache.revalidate_freq=60
+opcache.fast_shutdown=1
+opcache.enable_cli=1
+
+
 ;PHPStorm
 [Xdebug]
-xdebug.remote_enable=1
 xdebug.idekey=PHPSTORM
-xdebug.profiler_enable=0
 xdebug.max_nesting_level=700
-xdebug.remote_host=192.168.0.1 # your ip
-xdebug.remote_port=9000
+xdebug.remote_host=10.0.17.232 # your ip
+xdebug.remote_autostart=1
+xdebug.remote_enable=1
+xdebug.remote_port=9009
+xdebug.remote_handler=dbgp
+xdebug.remote_connect_back=0
+xdebug.profiler_enable=On
+xdebug.profiler_append = On
+;xdebug.profiler_aggregate = On
+xdebug.profiler_output_dir=/tmp/xdebug
